azure/aks/cpowers/typescript-demo-app/deployment.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: ${bamboo_repository_name}-${bamboo_repository_branch_name}
  name: ${bamboo_repository_name}-${bamboo_repository_branch_name}
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ${bamboo_repository_name}-${bamboo_repository_branch_name}
  template:
    metadata:
      labels:
        k8s-app: ${bamboo_repository_name}-${bamboo_repository_branch_name}
        repository: ${bamboo_repository_name}
        branch: ${bamboo_repository_branch_name}
        commit: ${bamboo_repository_revision_number}
        build: ${bamboo_buildKey}
    spec:
      containers:
      - name: demo-project
        #image: ${bamboo_repository_name}/${bamboo_repository_branch_name}:${bamboo_repository_revision_number}
        image: cpowers/${bamboo_repository_name}-${bamboo_repository_branch_name}:${bamboo_repository_revision_number}
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          requests:
            memory: "50Mi"
            cpu: "0.25"
---
apiVersion: v1
kind: Service
metadata:
  name: ${bamboo_repository_name}-${bamboo_repository_branch_name}
spec:
  selector:
    k8s-app: ${bamboo_repository_name}-${bamboo_repository_branch_name}
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${bamboo_repository_name}-${bamboo_repository_branch_name}
spec:
  rules:
  - host: ${bamboo_repository_name}-${bamboo_repository_branch_name}.k8s.cpowers.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: ${bamboo_repository_name}-${bamboo_repository_branch_name}
          servicePort: http
  tls:
   - secretName: tls-k8s-cpowers-dev
